--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 	<li><a href="Memory/">Memory</a></li>
 	<li><a href="Funkux/">Funkux</a></li>
 	<li><a href="Farmspiel/">Farming</a></li>
-	<li><a href="DRAGONBLOCKS/">DRAGONBLOCKS</a></li>
+	<li><a href="DRAGONBLOCKS/">DRAGONBLOCKS1</a></li>
 	<li><a href="debug/">debug</a></li>
 	
 		
