--- a/index.html
+++ b/index.html
@@ -30,6 +30,14 @@
 	<li><a href="Funkux/">Funkux</a></li>
 	<li><a href="Farmspiel/">Farming</a></li>
 	<li><a href="DRAGONBLOCKS/">DRAGONBLOCKS</a></li>
+	<li><a href="1mal1trainer/">1mal1trainer</a></li>
+	<li><a href="Fragen/">Fragen</a></li>
+	<li><a href="Haferkekse/">Haferkekse</a></li>
+	<li><a href="kresse/">kresse</a></li>
+	<li><a href="quiz/">HTML quiz</a></li>
+	<li><a href="Spielmännchen/">Spielmännchen</a></li>
+	<li><a href="Taschenrechner/">Taschenrechner</a></li>
+	<li><a href="vergleiche/">vergleiche</a></li>
 	<li><a href="debug/">debug</a></li>
 	
 		
