--- a/index.html
+++ b/index.html
@@ -1,47 +1,1 @@
-<!DOCTYPE html>
-<html>
-<head>
-	<meta charset="utf-8">
-	<title></title>
-	<style>
-		#header{position:fixed;top:0px;left:0px;height:100px;background-color:brown;right:0;font-size:25px}
-		li{font-size:30px;color:green;font-weight:bold;font-family:sans-serif;text-decoration:none}
-		a{font-size:30px;color:green;font-weight:bold;font-family:sans-serif;text-decoration:none}
-		body{background-color:skyblue}
-	</style>
-	<script>
-	setTimeout(grow ,100);
-	function grow(){
-		var header=document.getElementById('header');
-		while(header.style.right>0){
-			header.style.width+=1;
-			}
-		}
-	</script>
-</head>
-<body>
-	<div id="header">
-		<h1 align="center" style="font-family:sans-serif;top:-15px;position:relative">INDEX</h1>
-	</div>
-	<br><br><br><br><br>
-	<ul>
-	<li><a href="">INDEX</a></li>
-	<li><a href="Memory/">Memory</a></li>
-	<li><a href="Funkux/">Funkux</a></li>
-	<li><a href="Farmspiel/">Farming</a></li>
-	<li><a href="DRAGONBLOCKS/">DRAGONBLOCKS</a></li>
-	<li><a href="1mal1trainer/">1mal1trainer</a></li>
-	<li><a href="Fragen/">Fragen</a></li>
-	<li><a href="Haferkekse/">Haferkekse</a></li>
-	<li><a href="kresse/">kresse</a></li>
-	<li><a href="quiz/">HTML quiz</a></li>
-	<li><a href="Spielmännchen/">Spielmännchen</a></li>
-	<li><a href="Taschenrechner/">Taschenrechner</a></li>
-	<li><a href="vergleiche/">vergleiche</a></li>
-	<li><a href="debug/">debug</a></li>
-	
-		
-	</ul>
-	
-</body>
-</html>
+<meta http-equiv="refresh" content="0; URL=eligames.tk">
